--- a/rest-api.yaml
+++ b/rest-api.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-kind: Pod
+kind: Deployment
 metadata:
   name: "rest-api"
   namespace: default
@@ -7,16 +7,16 @@ metadata:
     app: "rest-api"
 spec:
   containers:
-  - name: rest-api
-    image: "amitchavda00/rest-api:1.0"
-    resources:
-      limits:
-        cpu: 200m
-        memory: 500Mi
-      requests:
-        cpu: 100m
-        memory: 200Mi
-    ports:
-    - containerPort:  4001
-      name:  http
+    - name: rest-api
+      image: "amitchavda00/rest-api:1.0"
+      resources:
+        limits:
+          cpu: 200m
+          memory: 500Mi
+        requests:
+          cpu: 100m
+          memory: 200Mi
+      ports:
+        - containerPort: 4001
+          name: http
   restartPolicy: OnFailure
