--- a/rest-api.yaml
+++ b/rest-api.yaml
@@ -1,22 +1,31 @@
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: "rest-api"
+  name: rest-api
   namespace: default
   labels:
-    app: "rest-api"
+    app: rest-api
 spec:
-  containers:
-    - name: rest-api
-      image: "amitchavda00/rest-api:1.0"
-      resources:
-        limits:
-          cpu: 200m
-          memory: 500Mi
-        requests:
-          cpu: 100m
-          memory: 200Mi
-      ports:
-        - containerPort: 4001
-          name: http
-  restartPolicy: OnFailure
+  selector:
+    matchLabels:
+      app: rest-api
+  replicas: 2
+  template:
+    metadata:
+      labels:
+        app: rest-api
+    spec:
+      containers:
+        - name: rest-api
+          image: amitchavda00/rest-api:1.0
+          resources:
+            requests:
+              cpu: 100m
+              memory: 100Mi
+            limits:
+              cpu: 100m
+              memory: 100Mi
+          ports:
+            - containerPort: 4001
+              name: rest-api
+      restartPolicy: Always
