working on ingress

--- a/rest-api.yaml
+++ b/rest-api.yaml
@@ -21,3 +21,19 @@ spec:
           ports:
             - containerPort: 4001
               name: rest-api
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: rest-api-service
+  namespace: default
+spec:
+  selector:
+    app: rest-api
+  type: LoadBalancer
+  ports:
+    - name: rest-api-service
+      protocol: TCP
+      port: 7001
+      targetPort: 4001
+  externalTrafficPolicy: Local
