--- a/mysql-volumes.yaml
+++ b/mysql-volumes.yaml
@@ -1,18 +1,13 @@
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: mypv-1
-spec:
-  capacity:
-    storage: 1Gi
-  volumeMode: Filesystem
-  accessModes:
-    - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Recycle
-  storageClassName: manual
-  mountOptions:
-    - hard
-    - nfsvers=4.1
-  nfs:
-    path: /mysqlpv-1
-    server: 172.17.0.2
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: mypv-1
+# spec:
+#   capacity:
+#     storage: 1Gi
+#   accessModes:
+#     - ReadWriteOnce
+#   persistentVolumeReclaimPolicy: Recycle
+#   storageClassName: manual
+#   hostPath:
+#     path: /mysql
